[package]
name = "atc-sim"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "atc_sim_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures = "0.3.31"
tokio-tungstenite = "0.26.2"
tungstenite = "0.26.2"
url = "2.5.4"
tauri-plugin-log = "2"
log = "0.4.25"
tokio = "1.43.0"
fern = "0.6"
chrono = "0.4"
uuid = { version = "1", features = ["v4"] }

